--- a/hotelDetailsPage.html
+++ b/hotelDetailsPage.html
@@ -67,28 +67,10 @@
                             <div class="row justify-content-between m-0 p-0">
                                 <div class="stars-container col m-0 p-0">
                                     <div id="stars">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="15"
-                                            hight="15" class="rating-star">
-                                            <path
-                                                d="M23.555 8.729a1.505 1.505 0 0 0-1.406-.98h-6.087a.5.5 0 0 1-.472-.334l-2.185-6.193a1.5 1.5 0 0 0-2.81 0l-.005.016-2.18 6.177a.5.5 0 0 1-.471.334H1.85A1.5 1.5 0 0 0 .887 10.4l5.184 4.3a.5.5 0 0 1 .155.543l-2.178 6.531a1.5 1.5 0 0 0 2.31 1.684l5.346-3.92a.5.5 0 0 1 .591 0l5.344 3.919a1.5 1.5 0 0 0 2.312-1.683l-2.178-6.535a.5.5 0 0 1 .155-.543l5.194-4.306a1.5 1.5 0 0 0 .433-1.661z">
-                                            </path>
-                                        </svg>
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="15"
-                                            hight="15" class="rating-star">
-                                            <path
-                                                d="M23.555 8.729a1.505 1.505 0 0 0-1.406-.98h-6.087a.5.5 0 0 1-.472-.334l-2.185-6.193a1.5 1.5 0 0 0-2.81 0l-.005.016-2.18 6.177a.5.5 0 0 1-.471.334H1.85A1.5 1.5 0 0 0 .887 10.4l5.184 4.3a.5.5 0 0 1 .155.543l-2.178 6.531a1.5 1.5 0 0 0 2.31 1.684l5.346-3.92a.5.5 0 0 1 .591 0l5.344 3.919a1.5 1.5 0 0 0 2.312-1.683l-2.178-6.535a.5.5 0 0 1 .155-.543l5.194-4.306a1.5 1.5 0 0 0 .433-1.661z">
-                                            </path>
-                                        </svg>
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="15"
-                                            hight="15" class="rating-star">
-                                            <path
-                                                d="M23.555 8.729a1.505 1.505 0 0 0-1.406-.98h-6.087a.5.5 0 0 1-.472-.334l-2.185-6.193a1.5 1.5 0 0 0-2.81 0l-.005.016-2.18 6.177a.5.5 0 0 1-.471.334H1.85A1.5 1.5 0 0 0 .887 10.4l5.184 4.3a.5.5 0 0 1 .155.543l-2.178 6.531a1.5 1.5 0 0 0 2.31 1.684l5.346-3.92a.5.5 0 0 1 .591 0l5.344 3.919a1.5 1.5 0 0 0 2.312-1.683l-2.178-6.535a.5.5 0 0 1 .155-.543l5.194-4.306a1.5 1.5 0 0 0 .433-1.661z">
-                                            </path>
-                                        </svg>
                                     </div>
                                 </div>
                                 <div class="wishlist-container col m-0 p-0 text-end">
-                                    <span class="wishlist-icon-span p-2 ">
+                                    <span class="wishlist-icon-span p-2" id="wishlist-svg-container">
                                         <svg viewBox="0 0 128 128" class="" width="1.5em" height="1.5em">
                                             <path
                                                 d="M64 112a3.6 3.6 0 0 1-2-.5 138.8 138.8 0 0 1-44.2-38c-10-14.4-10.6-26-9.4-33.2a29 29 0 0 1 22.9-23.7c11.9-2.4 24 2.5 32.7 13a33.7 33.7 0 0 1 32.7-13 29 29 0 0 1 22.8 23.7c1.3 7.2.6 18.8-9.3 33.3-9.1 13.1-24 25.9-44.2 37.9a3.6 3.6 0 0 1-2 .5z">
@@ -106,14 +88,13 @@
                             </div>
                         </div>
                         <div class="gallery-container m-0 p-0">
-                            <h3 class="hotel-title text-capitalize fw-bold">blah blah blah</h3>
+                            <h3 class="hotel-title text-capitalize fw-bold" id="hotel-title">blah blah blah</h3>
                             <span class="hotel-address-icon-span">
                                 <i class="fa-solid fa-location-dot"></i>
                             </span>
                             <span class="hotel-address text-capitalize">
-                                Sheraton Road, 84511 Hurghada, Egypt
                             </span>
-                            <div class="hotel-imgs m-0 p-0">
+                            <div class="hotel-imgs m-0 mt-2 p-0">
                                 <!-- hotel-main-imgs -->
                                 <div class="hotel-main-imgs m-0 p-0">
                                     <div class="m-0 p-0" id="hotel-main-imgs-container">
@@ -131,13 +112,13 @@
                                         <!-- right img -->
                                         <div class="hotel-main-imgs-right  m-0 p-0">
                                             <img src="assets/images/searchPage/10006.webp" id="img-3" alt="blah"
-                                                class="w-100">
+                                                class="">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="hotel-more-imgs m-0 mt-3 p-0">
                                     <div class=" m-0 p-0" id="hotel-more-imgs-container">
-                                        <div class=" more-img">
+                                        <!-- <div class=" more-img">
                                             <img src="assets/images/searchPage/10006.webp" id="img-3" alt="blah"
                                                 class="w-100">
                                         </div>
@@ -160,49 +141,15 @@
                                         <div class="more-img">
                                             <img src="assets/images/searchPage/10006.webp" id="img-3" alt="blah"
                                                 class="w-100">
-                                        </div>
+                                            <p id="imgs-number">55</p>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
-                            <div class="hotel-imgs-mob m-0 p-0">
+                            <div class="hotel-imgs-mob m-0 mt-2 p-0">
                                 <div class="swiper mySwiper-hotel-gallery">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <img src="assets/images/searchPage/10005.webp" alt="blah"
-                                                class="w-100 m-0 p-0">
-                                        </div>
+                                    <div class="swiper-wrapper" id="hotel-more-imgs-container-mob">
+
                                     </div>
                                     <div class="swiper-button-next">
                                         <i class="fa-solid fa-chevron-right swiper-gallery-arrow"></i>
@@ -311,8 +258,9 @@
                 </div>
                 <div class="hotel-desc m-0 p-0">
                     <div class="row justify-content-between m-0 p-0">
-                        <div class="hotel-desc-details col-8 m-0 py-0 px-2 fs-6" id="hotel-desc-details">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem temporibus ab corporis,
+                        <div class="hotel-desc-details col-8 m-0 py-0 px-2 fs-6">
+                            <p id="hotel-desc-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                                temporibus ab corporis,
                                 eaque sequi in deleniti blanditiis, tempore dignissimos similique optio ad quibusdam
                                 harum nostrum excepturi odio laborum quisquam repudiandae.</p>
                         </div>
@@ -322,7 +270,7 @@
                                 <p class="text-capitalize fw-bold mb-2">Perfect for an 8-night stay!
                                 </p>
                                 <span><i class="fa-solid fa-location-dot"></i></span>
-                                <span class="hotel-address" id="hotel-address">blah blah</span>
+                                <span class="hotel-address">blah blah</span>
                                 <a href="#" class="reserve-btn btn btn-primary d-block rounded-0 mt-3">reserve</a>
                             </div>
                             <div class="reliable-info-container m-0 p-3">
@@ -339,6 +287,22 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section class="hotel-reviews-section m-auto px-0 py-1">
+                <h3>Guest reviews</h3>
+                <div class="m-0 p-0">
+                    <div class="result-card-rating text-start m-0 p-0">
+                        <div class="d-inline-block rating-number m-0 p-1" id="rating-number">8.5</div>
+                        <div class="d-inline-block rating-grade m-0 me-1 p-0">
+                            <h6 class="text-capitalize d-inline-block" id="rating-grade">very good,</h6>
+                            <span id="reviews-number">xxx </span> reviews
+                        </div>
+                    </div>
+                </div>
+                <h5>Categories</h5>
+                <div class="row justify-content-between m-0 p-0" id="categories-container">
+
                 </div>
             </section>
         </main>
